--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -3,12 +3,11 @@ on:
   workflow_dispatch:
     inputs:
       job:
-        description: NPM Package
+        description: Job to run
         required: true
         type: choice
         options:
           - cli
-          - shared
         default: cli
       semver:
         description: Bump version
@@ -26,6 +25,8 @@ jobs:
     runs-on: ubuntu-latest
     outputs:
       version: ${{steps.version-out.outputs.version}}
+    env:
+      DIR: apps/cli
     steps:
       - uses: actions/checkout@v4.1.5
         with:
@@ -36,86 +37,42 @@ jobs:
           node-version: '20'
 
       - name: Install deps
-        run: |
-          npm install --workspace=allure-deployer
-
+        run: cd ${{env.DIR}} && npm install
       - name: Run test
-        run: npm run test --workspace=packages/cli
-
+        run: cd ${{env.DIR}} && npm run test
       - name: Compile
-        run: npm run build --workspace=packages/cli
-
+        run: cd ${{env.DIR}} && npm run build
       - name: Bump version
-        run: |
-          cd packages/cli && npm version ${{github.event.inputs.semver}}
+        run: cd ${{env.DIR}} && npm version ${{github.event.inputs.semver}}
 
       - name: NPM Publish
         id: publish
         uses: JS-DevTools/npm-publish@v3.1.1
         with:
           token: ${{ secrets.NPM_TOKEN }}
-          package: packages/cli
+          package: ${{env.DIR}}
           ignore-scripts: false
 
-      - name: Notify Docker jobs
+      - name: Export version to Docker jobs
         id: version-out
-        run: echo "version=${{ steps.publish.outputs.version}}" >> $GITHUB_OUTPUT
+        run: echo "version=${{steps.publish.outputs.version}}" >> $GITHUB_OUTPUT
 
-      - name: Add & Commit
+      - name: Commit package.json changes
         uses: EndBug/add-and-commit@v9.1.4
         with:
           author_name: Sokari
           author_email: sokariharry@gmail.com
-          message: "Release packages/cli version ${{steps.publish.outputs.version}}"
-          add: 'packages/cli/*.json'
+          message: "Release CLI version ${{ steps.publish.outputs.version }}"
+          add: '${{ env.DIR }}/*.json'
           push: 'origin main --force'
           tag: 'v${{steps.publish.outputs.version}} --force'
-
-  deploy-shared:
-    if: ${{ github.event.inputs.job == 'shared' }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4.1.5
-        with:
-          token: '${{ secrets.PERSONAL_ACCESS_TOKEN }}'
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-
-      - name: Install deps
-        run: |
-          npm install --workspace=allure-deployer-shared
-      - name: Run test
-        run: npm run test --workspace=packages/shared
-
-      - name: Compile
-        run: npm run build --workspace=packages/shared
-
-      - name: Bump version
-        run: |
-          cd packages/shared && npm version ${{github.event.inputs.semver}}
-
-      - name: NPM Publish
-        id: publish
-        uses: JS-DevTools/npm-publish@v3.1.1
-        with:
-          token: ${{ secrets.NPM_TOKEN }}
-          package: packages/shared
-
-      - name: Add & Commit
-        uses: EndBug/add-and-commit@v9.1.4
-        with:
-          author_name: Sokari
-          author_email: sokariharry@gmail.com
-          message: "Release packages/shared version ${{steps.publish.outputs.version}}"
-          github_token: '${{ github.token }}'
-
 
   deploy-docker-action:
     if: ${{ github.event.inputs.job == 'cli' }}
     runs-on: ubuntu-latest
     needs: deploy-cli
+    env:
+      DIR: apps/action
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Docker login
@@ -127,8 +84,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6.10.0
         with:
-          context: ./packages/action
-          file: ./packages/action/action.Dockerfile
+          context: ${{env.DIR}}
+          file: action.Dockerfile
           platforms: linux/amd64
           push: true
           build-args: CLI_VERSION=${{needs.deploy-cli.outputs.version}}
@@ -136,11 +93,12 @@ jobs:
             sokari/allure-deployer-action:${{needs.deploy-cli.outputs.version}}
             sokari/allure-deployer-action:${{ github.sha }}
 
-
   deploy-docker:
     if: ${{ github.event.inputs.job == 'cli' }}
     runs-on: ubuntu-latest
     needs: deploy-cli
+    env:
+      DIR: apps/docker
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Set up QEMU
@@ -160,8 +118,8 @@ jobs:
       - name: Build and push
         uses: docker/build-push-action@v6.10.0
         with:
-          context: ./packages/docker
-          file: ./packages/docker/Dockerfile
+          context: ${{env.DIR}}
+          file: Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           build-args: CLI_VERSION=${{needs.deploy-cli.outputs.version}}
