--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -1,10 +1,12 @@
 {
   "compilerOptions": {
+    "rootDir": "./src",
+    "outDir": "./dist",
+    "skipLibCheck": true,
     "module": "esnext",
     "moduleResolution": "node",
     "noImplicitReturns": true,
     "noUnusedLocals": true,
-    "outDir": "./dist",
     "strict": true,
     "target": "es2020",
     "allowSyntheticDefaultImports": true,
@@ -13,6 +15,7 @@
     "types": ["node"],
     "declaration": true
   },
-
   "compileOnSave": true,
+  "include": ["src/**/*"],
+  "exclude": ["./test","jest.config.ts"]
 }
