--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -85,7 +85,7 @@ jobs:
         uses: docker/build-push-action@v6.10.0
         with:
           context: ${{env.DIR}}
-          file: action.Dockerfile
+          file: ${{env.DIR}}/action.Dockerfile
           platforms: linux/amd64
           push: true
           build-args: CLI_VERSION=${{needs.deploy-cli.outputs.version}}
@@ -119,7 +119,7 @@ jobs:
         uses: docker/build-push-action@v6.10.0
         with:
           context: ${{env.DIR}}
-          file: Dockerfile
+          file: ${{env.DIR}}/Dockerfile
           platforms: linux/amd64,linux/arm64
           push: true
           build-args: CLI_VERSION=${{needs.deploy-cli.outputs.version}}
