--- a/apps/docker/Dockerfile
+++ b/apps/docker/Dockerfile
@@ -1,10 +1,10 @@
 FROM node:20-alpine AS deps
 LABEL authors="cybersokari"
-RUN apk add openjdk17-jre
+RUN apk add --no-cache openjdk17-jre
 
 FROM deps AS prod
 
-ARG CLI_VERSION=1.0.6
+ARG CLI_VERSION
 RUN npm i -g allure-deployer@$CLI_VERSION
 COPY start.sh /start.sh
 RUN chmod +x /start.sh
