--- a/.github/workflows/example-site-build.yaml
+++ b/.github/workflows/example-site-build.yaml
@@ -11,14 +11,14 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Allure Deployer Action
-        uses: cybersokari/allure-deployer-action@v1.1.2
+        uses: cybersokari/allure-deployer-action@v1.1.6
         env:
           SLACK_TOKEN: ${{secrets.SLACK_TOKEN}}
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         with:
-          allure_results_path: '/assets/allure-results'
+          allure_results_path: 'assets/allure-results'
           storage_bucket: ${{vars.STORAGE_BUCKET}}
-          slack_channel_id: ${{secrets.SLACK_CHANNEL_ID}}
+          slack_channel: ${{secrets.SLACK_CHANNEL_ID}}
           show_history: 'true'
           show_retries: 'true'
           report_name: 'new report'
