--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -35,17 +35,18 @@
   },
   "type": "module",
   "dependencies": {
-    "chalk": "^5.4.0",
-    "commander": "^12.1.0",
-    "conf": "^13.1.0",
-    "ora": "^8.1.1",
+    "@actions/github": "^6.0.0",
     "@google-cloud/storage": "^7.14.0",
     "@slack/web-api": "^7.8.0",
     "allure-commandline": "^2.32.0",
     "ansi-escapes": "^7.0.0",
     "archiver": "^7.0.1",
     "async-mutex": "^0.5.0",
+    "chalk": "^5.4.0",
+    "commander": "^12.1.0",
+    "conf": "^13.1.0",
     "firebase-tools": "^13.29.1",
+    "ora": "^8.1.1",
     "p-limit": "^6.1.0",
     "random-words": "^2.0.1",
     "unzipper": "^0.12.3"
