--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -59,6 +59,7 @@
     "@types/unzipper": "^0.10.10",
     "@typescript-eslint/eslint-plugin": "^8.17.0",
     "@typescript-eslint/parser": "^8.17.0",
+    "allure-jest": "^3.0.7",
     "chai": "^5.1.2",
     "eslint": "^9.16.0",
     "eslint-config-google": "^0.14.0",
