--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,6 +1,9 @@
 name: Test
 on: 
     pull_request:
+permissions:
+  pull-requests: write
+  issues: write
 jobs:
     test:
         runs-on: ubuntu-latest
