--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -84,7 +84,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Allure Deployer Action
-        uses: ./apps/action
+        uses: ./apps/docker
         env:
           GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
           SLACK_TOKEN: ${{secrets.SLACK_TOKEN}}
