--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -72,7 +72,7 @@ jobs:
           tag: 'v${{steps.publish.outputs.version}} --force'
 
   deploy-docker:
-    if: ${{ github.event.inputs.job == 'cli' && github.event.inputs.build-docker }}
+    if: ${{ github.event.inputs.job == 'cli' && github.event.inputs.build-docker == 'true' }}
     runs-on: ubuntu-latest
     needs: deploy-cli
     env:
