--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -7,11 +7,9 @@ on:
         type: choice
         options:
           - test-docker
-          - test-action
+          - test-action-gh-pages
+          - test-action-firebase
         default: test-action
-      storage-bucket:
-        description: 'Your Firebase (GCP) storage bucket'
-        required: true
       retries:
         description: 'Number of test runs to show as retries in report'
         default: '10'
@@ -23,9 +21,6 @@ on:
         description: 'Title of the report'
         required: false
         default: 'Allure Report'
-      prefix:
-        description: 'The storage bucket path to back up Allure results and history files'
-        required: false
 
 jobs:
   test-docker:
@@ -52,7 +47,7 @@ jobs:
       - name: Deploy Allure Report to Firebase
         run: |
           docker run --rm \
-          -e STORAGE_BUCKET=${{github.event.inputs.storage-bucket}} \
+          -e STORAGE_BUCKET=${{vars.STORAGE_BUCKET}} \
           -e RETRIES=${{ github.event.inputs.retries }} \
           -e SHOW_HISTORY=${{ github.event.inputs.show-history }} \
           -e SLACK_TOKEN=${{secrets.SLACK_TOKEN}} \
@@ -61,24 +56,50 @@ jobs:
           -v ${{ github.workspace }}/gcp-key.json:/credentials/key.json \
           sokari/allure-deployer:latest
 
-  test-action:
-    if: ${{ github.event.inputs.job == 'test-action' }}
+  test-action-firebase:
+    if: ${{ github.event.inputs.job == 'test-action-firebase' }}
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.5
       - name: Allure Deployer Action
-        uses: cybersokari/allure-deployer-action@v1.1.15
+        uses: cybersokari/allure-deployer-action@v1.3
         env:
           SLACK_TOKEN: ${{secrets.SLACK_TOKEN}}
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
         with:
           allure_results_path: 'assets/allure-results'
-          storage_bucket: ${{github.event.inputs.storage-bucket}}
+          storage_bucket: ${{vars.STORAGE_BUCKET}}
           slack_channel: ${{secrets.SLACK_CHANNEL_ID}}
           show_history: ${{github.event.inputs.show-history}}
           retries: ${{github.event.inputs.retries}}
-          prefix: ${{github.event.inputs.prefix}}
+          prefix: 'test-action-firebase'
           update_pr: 'summary'
+
+  test-action-gh-pages:
+    if: ${{ github.event.inputs.job == 'test-action-gh-pages' }}
+    runs-on: ubuntu-latest
+    permissions:
+      contents: write
+    steps:
+      - uses: actions/checkout@v4.1.5
+      - name: Generate Allure Report with History and Retries
+        uses: cybersokari/allure-deployer-action@v1.3
+        env:
+          GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+        with:
+          allure_results_path: 'assets/allure-results'
+          storage_bucket: ${{vars.STORAGE_BUCKET}}
+          show_history: ${{github.event.inputs.show-history}}
+          retries: ${{github.event.inputs.retries}}
+          prefix: 'test-action-gh-pages'
+          update_pr: 'summary'
+          output: 'allure-report'
+      - name: Deploy report to Github Pages
+        if: always()
+        uses: peaceiris/actions-gh-pages@v4.0.0
+        with:
+          personal_token: ${{secrets.PERSONAL_ACCESS_TOKEN}}
+          publish_dir: 'allure-report'
 
   test-action-local:
     if: ${{ github.event.inputs.job == 'test-action-local' }}
@@ -93,10 +114,10 @@ jobs:
           GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS}}
         with:
           allure_results_path: 'assets/allure-results'
-          storage_bucket: ${{github.event.inputs.storage-bucket}}
+          storage_bucket: ${{vars.STORAGE_BUCKET}}
           report_name: ${{ github.event.inputs.report-name }}
-          slack_channel: ${{secrets.SLACK_CHANNEL}}
+          slack_channel: ${{secrets.SLACK_CHANNEL_ID}}
           retries: ${{github.event.inputs.retries}}
           show_history: ${{github.event.inputs.show-history}}
-          prefix: ${{github.event.inputs.prefix}}
+          prefix: 'test-action-local'
           update_pr: 'comment'
