--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -5,7 +5,7 @@ permissions:
   pull-requests: write
   issues: write
 jobs:
-    test:
+    test-deploy:
         runs-on: ubuntu-latest
         env:
             DIR: apps/cli
@@ -23,7 +23,7 @@ jobs:
           run: cd ${{env.DIR}} && npm run test
         
         - name: Generate and deploy Allure Report
-          uses: cybersokari/allure-deployer-action@v1.2
+          uses: cybersokari/allure-deployer-action@v1.3
           env:
             SLACK_TOKEN: ${{secrets.SLACK_TOKEN}}
             GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
@@ -36,3 +36,33 @@ jobs:
             retries: 10
             prefix: 'pr-test'
             update_pr: 'comment'
+    test-output:
+      runs-on: ubuntu-latest
+      env:
+        DIR: apps/cli
+      steps:
+        - uses: actions/checkout@v4.1.5
+        - name: Setup Node.js
+          uses: actions/setup-node@v4
+          with:
+            node-version: '20'
+
+        - name: Install deps
+          run: cd ${{env.DIR}} && npm i
+
+        - name: Run test
+          run: cd ${{env.DIR}} && npm run test
+
+        - name: Generate and deploy Allure Report
+          uses: cybersokari/allure-deployer-action@v1.3
+          env:
+            GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+            GITHUB_TOKEN: ${{secrets.GITHUB_TOKEN}}
+          with:
+            allure_results_path: '${{env.DIR}}/allure-results'
+            storage_bucket: ${{vars.STORAGE_BUCKET}}
+            show_history: true
+            retries: 10
+            prefix: 'pr-test'
+            update_pr: 'comment'
+            output: allure-report
