--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "@actions/github": "^6.0.0",
     "@google-cloud/storage": "^7.14.0",
+    "@octokit/rest": "^21.1.0",
     "@slack/web-api": "^7.8.0",
     "allure-commandline": "^2.32.0",
     "ansi-escapes": "^7.0.0",
