--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -61,19 +61,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4.1.5
-      - name: Allure Deployer Action
-        uses: cybersokari/allure-deployer-action@v1.3
-        env:
-          SLACK_TOKEN: ${{secrets.SLACK_TOKEN}}
-          GOOGLE_CREDENTIALS_JSON: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
+      - name: Deploy Reports to Firebase with History and Retries
+        uses: cybersokari/allure-deployer-action@v1.4.2
         with:
+          target: 'firebase'
+          google_credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           allure_results_path: 'assets/allure-results'
           storage_bucket: ${{vars.STORAGE_BUCKET}}
           slack_channel: ${{secrets.SLACK_CHANNEL_ID}}
+          slack_token: ${{secrets.SLACK_TOKEN}}
           show_history: ${{github.event.inputs.show-history}}
           retries: ${{github.event.inputs.retries}}
           prefix: 'test-action-firebase'
-          update_pr: 'summary'
 
   test-action-gh-pages:
     if: ${{ github.event.inputs.job == 'test-action-gh-pages' }}
@@ -82,15 +81,15 @@ jobs:
       contents: write
     steps:
       - uses: actions/checkout@v4.1.5
-      - name: Generate Allure Report with History and Retries
+      - name: Deploy Reports to GitHub pages with History and Retries
         uses: cybersokari/allure-deployer-action@v1.4.2
         with:
-          google_credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-          allure_results_path: 'assets/allure-results'
-          storage_bucket: ${{vars.STORAGE_BUCKET}}
           target: 'github'
+          google_credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
           github_pages_branch: 'gh-pages'
           github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
+          allure_results_path: 'assets/allure-results'
+          storage_bucket: ${{vars.STORAGE_BUCKET}}
           show_history: ${{github.event.inputs.show-history}}
           retries: ${{github.event.inputs.retries}}
           prefix: 'test-action-gh-pages'
