--- a/.github/workflows/examples.yml
+++ b/.github/workflows/examples.yml
@@ -1,15 +1,7 @@
-name: Github Actions use case
+name: Test Docker
 on:
   workflow_dispatch:
     inputs:
-      job:
-        description: 'Select the job to run'
-        type: choice
-        options:
-          - test-docker
-          - test-action-gh-pages
-          - test-action-firebase
-        default: test-action
       retries:
         description: 'Number of test runs to show as retries in report'
         default: '10'
@@ -21,10 +13,8 @@ on:
         description: 'Title of the report'
         required: false
         default: 'Allure Report'
-
 jobs:
   test-docker:
-    if: ${{ github.event.inputs.job == 'test-docker' }}
     runs-on: ubuntu-latest
     env:
       GCP_SECRETS: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
@@ -55,41 +45,3 @@ jobs:
           -v ${{ github.workspace }}/assets/allure-results:/allure-results \
           -v ${{ github.workspace }}/gcp-key.json:/credentials/key.json \
           sokari/allure-deployer:latest
-
-  test-action-firebase:
-    if: ${{ github.event.inputs.job == 'test-action-firebase' }}
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4.1.5
-      - name: Deploy Reports to Firebase with History and Retries
-        uses: cybersokari/allure-deployer-action@v1.4.2
-        with:
-          target: 'firebase'
-          google_credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-          allure_results_path: 'assets/allure-results'
-          storage_bucket: ${{vars.STORAGE_BUCKET}}
-          slack_channel: ${{secrets.SLACK_CHANNEL_ID}}
-          slack_token: ${{secrets.SLACK_TOKEN}}
-          show_history: ${{github.event.inputs.show-history}}
-          retries: ${{github.event.inputs.retries}}
-          prefix: 'test-action-firebase'
-
-  test-action-gh-pages:
-    if: ${{ github.event.inputs.job == 'test-action-gh-pages' }}
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    steps:
-      - uses: actions/checkout@v4.1.5
-      - name: Deploy Reports to GitHub pages with History and Retries
-        uses: cybersokari/allure-deployer-action@v1.4.2
-        with:
-          target: 'github'
-          google_credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
-          github_pages_branch: 'gh-pages'
-          github_token: ${{ secrets.PERSONAL_ACCESS_TOKEN }}
-          allure_results_path: 'assets/allure-results'
-          storage_bucket: ${{vars.STORAGE_BUCKET}}
-          show_history: ${{github.event.inputs.show-history}}
-          retries: ${{github.event.inputs.retries}}
-          prefix: 'test-action-gh-pages'
