--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -30,5 +30,5 @@ jobs:
             retries: 10
             prefix: 'pr-test'
             pr_comment : 'true'
-            github_token: ${{secrets.GITHUB_TOKEN}}
+            github_token: ${{secrets.secrets.PERSONAL_ACCESS_TOKEN}}
             google_credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
