--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -22,8 +22,6 @@ jobs:
         - name: Generate and deploy Allure Report
           uses: cybersokari/allure-deployer-action@v1.5.1
           with:
-            github_pages_branch: 'gh-pages'
-            target: 'github'
             allure_results_path: 'apps/shared/allure-results'
             storage_bucket: ${{vars.STORAGE_BUCKET}}
             slack_channel: ${{secrets.SLACK_CHANNEL_ID}}
@@ -32,5 +30,5 @@ jobs:
             retries: 10
             prefix: 'pr-test'
             pr_comment : 'true'
-            github_token: ${{secrets.secrets.PERSONAL_ACCESS_TOKEN}}
+            github_token: ${{secrets.PERSONAL_ACCESS_TOKEN}}
             google_credentials_json: ${{ secrets.GOOGLE_APPLICATION_CREDENTIALS }}
