--- a/apps/cli/tsconfig.json
+++ b/apps/cli/tsconfig.json
@@ -13,7 +13,7 @@
     "esModuleInterop": true,
     "resolveJsonModule": true,
     "types": ["node"],
-    "declaration": false
+    "declaration": true
   },
   "compileOnSave": true,
   "include": ["src/**/*"],
