--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -29,7 +29,7 @@
     "lint": "eslint --ext .js,.ts .",
     "build": "rm -rf ./dist && tsc -p tsconfig.json",
     "build:watch": "tsc --watch",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --passWithNoTests",
     "coverage": "NODE_OPTIONS=--experimental-vm-modules jest --coverage",
     "prepublishOnly": "npm run build && node version-update.cjs"
   },
