--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -35,11 +35,12 @@
   },
   "type": "module",
   "dependencies": {
-    "allure-deployer-shared": "1.1.4",
     "@google-cloud/storage": "^7.14.0",
+    "allure-deployer-shared": "1.1.4",
     "commander": "^12.1.0",
     "conf": "^13.1.0",
-    "ora": "^8.1.1"
+    "ora": "^8.1.1",
+    "shared": "^0.2.0"
   },
   "devDependencies": {
     "@types/chai": "^5.0.1",
