--- a/apps/cli/package.json
+++ b/apps/cli/package.json
@@ -36,11 +36,10 @@
   "type": "module",
   "dependencies": {
     "@google-cloud/storage": "^7.14.0",
-    "allure-deployer-shared": "1.1.6",
+    "allure-deployer-shared": "1.1.9",
     "commander": "^12.1.0",
     "conf": "^13.1.0",
-    "ora": "^8.1.1",
-    "shared": "^0.2.0"
+    "ora": "^8.1.1"
   },
   "devDependencies": {
     "@types/chai": "^5.0.1",
