Enable write permission for Github token in deploy.yaml workflow

--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -27,6 +27,8 @@ on:
 jobs:
   deploy-cli:
     runs-on: ubuntu-latest
+    permissions:
+      contents: write
     outputs:
       version: ${{steps.version-out.outputs.version}}
     env:
